# portfolio_q_learning

./: .gitignore  README.md  pyproject.toml  requirements.txt  torch_import_log2.txt
.claude/: CLAUDE.md  settings.json
.claude/memory/: MEMORY.md  project_design_decisions.md  project_design_decisions_models.md  project_portfolio_qlearning.md
.codex/: config.toml
claude_files/scripts/: get_dialogue_timestamp.sh  save_claude_reasoning.py
codex_files/: claude_memory_migration_plan.md  non_blocking_followups.md  permanent_operating_notes.md  phase2_manager_notes.md  relay_automation_proposal.md  repo_design_memory.md
codex_files/archive/: 2026-03-26_phase2_manager_notes.md
configs/base/: default.yaml
configs/experiments/: ctrl_baseline_tiny.yaml
configs/tests/: smoke.yaml
extra_arg/: report.json  resolved_config.yaml
references/: phase2_execution_brief.md  portfolio_mv_ctrl_complete_pseudocode.md  portfolio_mv_papers_algorithm_summary.md  portfolio_mv_papers_companion_implementation_notes.md
scripts/: run_config_experiment.py  run_ctrl_demo.py  run_ctrl_oracle_demo.py  run_dtype_compare_demo.py  run_inspect_artifacts.py  run_long_verification.py  run_plot_artifacts.py  run_smoke_test.py
shared_agent_files/: claude_code_todo.md  dialogue.txt  dialogue_brainstorm.txt  setup_and_utilities_guidelines.md
shared_agent_files/archive/: dialogue_2026-03-26_phase1_to_phase3a.txt  dialogue_2026-03-27_phase10_to_phase11a.txt  dialogue_2026-03-27_phase8c_to_phase9a.txt  dialogue_2026-03-28_phase11a_to_phase15b.txt  (+3 more)
src/: __init__.py
src/algos/: __init__.py  (+2 more)
(+88 files in other folders)
